--- a/gifs.html
+++ b/gifs.html
@@ -22,7 +22,7 @@
     <body class="page page_theme_islands i-bem" data-bem='{"page":{}}'>
         <!-- Шапка страницы -->
         <div class="header">
-            <div class="header__item header__logo">Мобилизация.Гифки</div>
+            <div class="header__item header__logo">Мобилизация.Гифки 1</div>
 
             <form class="header__item header__search search i-bem" data-bem='{"search":{}}'>
                 <div class="search__col search__col_type_input">
